--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <span><i class="fas fa-phone"></i> 786-842-0320</span>
           </div>
           <div class="contact-info">
-            <span><i class="fas fa-envelope"></i> sales@anncareequipment.com</span>
+            <span><i class="fas fa-envelope"></i> sales@ancarequipment.com</span>
           </div>
 
         </div>
@@ -258,5 +258,6 @@
 
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 </body>
+
 
 </html>
